--- a/src/main/resources/templates/fragments/social_sidebar.html
+++ b/src/main/resources/templates/fragments/social_sidebar.html
@@ -31,7 +31,7 @@
                 </strong> </a>
             </li>
             <li class="twitter-three">
-                <a href="#" target="_blank"> <strong>
+                <a href="https://twitter.com/ForumsSxTelerik" th:href="@{https://twitter.com/ForumsSxTelerik}"> <strong>
                     <span>Subscribe</span>
                     <i class="fa fa-twitter" aria-hidden="true"></i>
 
