--- a/src/main/resources/templates/fragments/stats_sidebar.html
+++ b/src/main/resources/templates/fragments/stats_sidebar.html
@@ -12,7 +12,7 @@
         <a href="#"><i class="fa fa-question-circle" aria-hidden="true"
                        th:text="' Active Topics: ' + ${allTopics.size()}"> </i></a>
         <i class="fa fa-comment" aria-hidden="true"
-           th:text="' Registered Users: ' + ${allUsers.size()}"> </i></div>
+           th:text="' Registered Users: ' + ${countUsers}"> </i></div>
 </div>
 </body>
 </html>
