Corrected view of listing of all users

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1505,7 +1505,7 @@ h5:hover {
     width: 85%;
 }
 
-.question-ttile32 {
+.question-tile32 {
     width: 95%;
     height: 40px;
     background-color: #F3F3F3;
@@ -1615,7 +1615,7 @@ h5:hover {
     margin-top: 20px;
 }
 
-.publis1291 {
+.publish1291 {
     padding: 5px 15px 5px 15px;
     width: 100%;
     color: #fff;
@@ -1626,7 +1626,7 @@ h5:hover {
     margin-top: 20px;
 }
 
-.publis1291:hover {
+.publish1291:hover {
     padding: 5px 15px 5px 15px;
     width: 100%;
     color: #fff;
