--- a/src/main/resources/templates/contact_us.html
+++ b/src/main/resources/templates/contact_us.html
@@ -68,7 +68,7 @@
                         </div>
                     </form>
                     <div class="publish-button2389">
-                        <button type="button" class="publis1291">Publish your Question</button>
+                        <button type="button" class="publish1291">Publish your Question</button>
                     </div>
 
                 </div>
