--- a/src/main/resources/templates/ask_question.html
+++ b/src/main/resources/templates/ask_question.html
@@ -46,7 +46,7 @@
                         <div class="question-title39">
                             <span class="form-description433">Question-Title* </span>
                             <label>
-                                <input type="text" name="fname" class="question-ttile32" placeholder="Write Your Question Title">
+                                <input type="text" name="fname" class="question-tile32" placeholder="Write Your Question Title">
                             </label>
                         </div>
                         <div class="details2-239">
@@ -66,7 +66,7 @@
                     </form>
 
                     <div class="publish-button2389">
-                        <input type="submit" value="Submit" class="publis1291">
+                        <input type="submit" value="Submit" class="publish1291">
                     </div>
                 </div>
             </div>
