--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,109 +1,69 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>All Users</title>
-  <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}">
-  <link href="../static/css/style.css" rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
-  <link href="../static/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
-  <link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}">
-  <style>
-    /* Custom styles for the home link container */
-    .home-container {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-    }
+    <meta charset="UTF-8">
+    <title>All Users</title>
+    <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}">
+    <link href="../static/css/style.css" rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+    <link href="../static/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
+    <link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css"
+          th:href="@{/css/font-awesome.min.css}">
+    <style>
 
-    /* Custom styles for the bigger Home link */
-    .bigger-home-link {
-      width: 40px; /* Adjust this value to resize the image */
-      height: 40px;
-    }
+        .table {
+            border-collapse: collapse;
+            width: 100%;
+        }
 
-    .mid-bar {
-      background-color: #333333;
-      padding: 40px;
-    }
+        .row:nth-child(even) {
+            background-color: #f2f2f2;
+        }
 
-    .top-bar {
-      position: absolute;
-      left: 0;
-      right: 0;
-      background-color: #ff7361;
-      padding: 40px;
-      width: 100%;
-      text-align: center;
-    }
-
-    .table {
-      border-collapse: collapse;
-      width: 100%;
-    }
-
-    .header {
-      background-color: #f2f2f2;
-      text-align: left;
-      padding: 8px;
-    }
-
-    .cell {
-      border: 1px solid #dddddd;
-      text-align: left;
-      padding: 8px;
-    }
-
-    .row:nth-child(even) {
-      background-color: #f2f2f2;
-    }
-
-    .row:hover {
-      background-color: #f2f2f2;
-    }
-  </style>
+        .row:hover {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
 <!--======== Navbar =======-->
 <div th:replace="fragments/navbar :: navbar"></div>
 
-<!--======= welcome section on top background=====-->
-<section class="welcome-part-one">
-  <div class="container">
-  </div>
-</section>
-
-
-<div class="mid-bar"></div>
-<div class="container min-vh-100">
-  <div class="home-container">
-    <a href="/" class="bigger-home-link">
-      <img src="/assets/img/flogo.png" alt="Home">
-    </a>
-  </div>
-  <div class="top-bar"></div>
-
-  <div class="table-container">
-    <h2 class="text-center" th:text="#{users.title}">All Users</h2>
-    <div class="table">
-      <div class="header">
-        <div class="cell" th:text="#{user.username}">Username</div>
-        <div class="cell" th:text="#{user.email}">Email</div>
-        <div class="cell" th:text="#{user.firstName}">First Name</div>
-        <div class="cell" th:text="#{user.lastName}">Last Name</div>
-        <div class="cell" th:text="#{user.isAdmin}">Is Admin</div>
-      </div>
-      <div class="row" th:each="user : ${users}">
-        <div class="cell">
-          <a href="#" th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getUsername()}">User</a>
+<section class="main-content921 centered-width">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9">
+                <div class="ask-question-input-part032">
+                    <div class="table-container">
+                        <h2 class="text-center" th:text="#{users.title}">All Users</h2>
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th th:text="#{user.username}">Username</th>
+                                <th th:text="#{user.email}">Email</th>
+                                <th th:text="#{user.firstName}">First Name</th>
+                                <th th:text="#{user.lastName}">Last Name</th>
+                                <th th:text="#{user.isAdmin}">Is Admin</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="user : ${users}">
+                                <td>
+                                    <a th:href="@{/users/{id}(id=${user.getId()})}"
+                                       th:text="${user.getUsername()}">User</a>
+                                </td>
+                                <td th:text="${user.getEmail()}">-</td>
+                                <td th:text="${user.getFirstName()}">-</td>
+                                <td th:text="${user.getLastName()}">-</td>
+                                <td th:text="${user.getIsAdmin() == 1 ? 'Yes' : 'No'}">-</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="cell" th:text="${user.getEmail()}">-</div>
-        <div class="cell" th:text="${user.getFirstName()}">-</div>
-        <div class="cell" th:text="${user.getLastName()}">-</div>
-        <div class="cell" th:text="${user.getIsAdmin() == 1 ? 'Yes' : 'No'}">-</div>
-      </div>
     </div>
-  </div>
-</div>
+</section>
 
 
 <!--    footer -->
