Finally RQ error (:

--- a/src/main/resources/templates/edit_topic.html
+++ b/src/main/resources/templates/edit_topic.html
@@ -43,7 +43,7 @@
                 <div class="ask-question-input-part032">
                     <h4>Edit Topic Question</h4>
                     <hr>
-                    <form name="topic" th:action="@{/topic/edit/{id}(id=${topic.getId()})}" method="post" th:object="${topic}">
+                    <form name="topic" th:action="@{/topics/edit/{id}(id=${topic.getId()})}" method="post" th:object="${topic}">
                         <div class="question-title39">
                             <span class="form-description433">Question-Title* </span>
                             <label>
@@ -142,11 +142,11 @@
                                 <input type="text" name="tags" class="question-tile32" th:field="*{tags}" th:value="${topic.getTags()}">
                             </label>
                         </div>
+                        <div class="publish-button2389">
+                            <input type="submit" value="Submit" class="publish1291">
+                        </div>
                     </form>
 
-                    <div class="publish-button2389">
-                        <input type="submit" value="Submit" class="publish1291">
-                    </div>
                 </div>
             </div>
         </div>
