--- a/src/main/resources/templates/SearchBarView.html
+++ b/src/main/resources/templates/SearchBarView.html
@@ -88,7 +88,7 @@
                         </div>
                     </div>
 
-                    <nav aria-label="Page navigation">
+                    <nav aria-label="Page navigation" th:if="${not topicsByName.isEmpty()}">
                         <ul class="pagination">
                             <li>
                                 <a href="#" aria-label="Previous">
@@ -107,152 +107,30 @@
                             </li>
                         </ul>
                     </nav>
+
                     <!--  End of content-1------>
                 </div>
             </div>
             <!--end of col-md-9 -->
             <!--strart col-md-3 (side bar)-->
             <aside class="col-md-3 sidebar97239">
-                <div class="status-part3821">
-                    <h4>Forum statistics</h4>
-                    <a href="#"><i class="fa fa-question-circle" aria-hidden="true"> Question(20)</i></a>
-                    <i class="fa fa-comment" aria-hidden="true"> Answers(50)</i></div>
-                <div class="categori-part329">
-                    <h4>Category</h4>
-                    <ul>
-                        <li><a href="#">web developer</a></li>
-                        <li><a href="#">Andriod developer</a></li>
-                        <li><a href="#">grapics developer</a></li>
-                        <li><a href="#">web developer</a></li>
-                    </ul>
-                </div>
+                <div th:replace="fragments/stats_sidebar :: stats"></div>
                 <!--             social part -->
                 <div th:replace="fragments/social_sidebar :: social"></div>
                 <!--              highest part-->
                 <div th:replace="fragments/top_users_sidebar :: topusers"></div>
                 <!--               end of Highest points -->
                 <!--          start tags part-->
-                <div class="tags-part2398">
-                    <h4>Tags</h4>
-                    <ul>
-                        <li th:each="tag : ${tags}">
-                            <a href="#" th:href="@{/tags/{id}(id=${tag.getId()})}" th:text="${tag.getName()}"></a>
-                        </li>
-                    </ul>
-                </div>
-                <hr>
+                <div th:replace="fragments/tags_sidebar :: sidetags"></div>
                 <!--          End tags part-->
             </aside>
         </div>
     </div>
 </section>
 <!--    footer -->
-<section class="footer-part">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="info-part-one320">
-                    <h4>Where We Are ?</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi adipiscing gravida odio, sit amet
-                        suscipit risus ultrices eu.</p>
-                    <h4>Address :</h4>
-                    <p>Ask Me Network, 33 Street, syada
-                        <br> Sofia, Bulgaria</p>
-                    <h4>Support :</h4>
-                    <p>Support Telephone No : (+2)01111011110</p>
-                    <p>Support Email Account : </p>
-                    <p>telerikforums@gmail.com</p>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-two320">
-                    <h4>Quick Links</h4>
-                    <a href="#">
-                        <p>-Home</p>
-                    </a>
-                    <a href="#">
-                        <p>-Ask Question</p>
-                    </a>
-                    <a href="#">
-                        <p>-Questions</p>
-                    </a>
-                    <a href="#">
-                        <p>-Users</p>
-                    </a>
-                    <a href="#">
-                        <p>-Edit Profile</p>
-                    </a>
-                    <a href="#">
-                        <p>-Page</p>
-                    </a>
-                    <a href="#">
-                        <p>-Contact Us</p>
-                    </a>
-                    <a href="contact_us.html" class="last-child12892">
-                        <p>-Buy now</p>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-three320">
-                    <h4>Popular Questions</h4>
-                    <div class="news-info209">
-                        <h5>Why are the British confused</h5>
-                        <p>(Why I darest say, they darest not get offended when they so ...</p> <small>July 16,
-                        2017</small></div>
-                    <div class="news-info209">
-                        <h5>How to approach applying for</h5>
-                        <p>(I am trying to find/change my career trajectory. Its a good cozy ...</p> <small>July 16,
-                        2017</small></div>
-                    <div class="news-info209">
-                        <h5>How to evaluate whether a</h5>
-                        <p>A friend of mine is the CEO of his own small business. ...</p> <small>July 16, 2017</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-four320">
-                    <h4>Latest Tweets</h4>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="footer-social">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <p>Copyright 2023 - Sex forums | <strong>Team 10 @ Telerik A48 Java Cohort</strong></p>
-            </div>
-            <div class="col-md-6">
-                <div class="social-right2389"><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a> <a
-                        href="https://www.facebook.com/profile.php?id=100095611680778"><i class="fa fa-facebook"
-                                                                                          aria-hidden="true"></i></a> <a
-                        href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> <a href="#"><i
-                        class="fa fa-youtube" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-skype"
-                                                                                         aria-hidden="true"></i></a> <a
-                        href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-rss"
-                                                                                                      aria-hidden="true"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<div th:replace="fragments/footer :: footer"></div>
 <script src="/js/jquery-3.1.1.min.js" th:href="@{/js/jquery-3.1.1.min.js}"></script>
 <script src="/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
-<script src="/js/npm.js" th:href="@{/js/npm.js}"></script>
 </body>
 
 </html>
